# polygon-mev-bot

./: .env  Cargo.toml  README.md  config.yaml
abis/: FastLane.json  FastLaneSender.json  FlashLoanArbitrage.json  QuickswapRouter.json  UniswapV3Router.json
contracts/: Cargo.toml  flashloanarbitrage.sol  generate.rs
contracts/flattened/: flashloanarbitrage.sol
routers/: mod.rs  quickswap.rs  sushiswap.rs  uniswap_v3.rs
src/: advanced.rs  fastlane_integration.rs  lib.rs  main.rs  quickswap.rs  simulation_engine.rs
