// Cargo.toml
[package]
name = "polygon-flashloan-arbitrage"
version = "0.1.0"
edition = "2021"

[dependencies]
ethers = { version = "2.0", features = ["ws", "rustls"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
futures = "0.3"
hex = "0.4"
revm = "2.0"
bounded-vec-deque = "0.1"
